--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -1,12 +1,19 @@
-﻿<Window x:Class="Test.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Test"
+        xmlns:Synoptics="clr-namespace:Prevu.Synoptics;assembly=Prevu.Synoptics"
+        x:Class="Test.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="746" Width="1600">
+  <Grid>
 
-    </Grid>
+
+
+    <Synoptics:GR1 HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+
+
+  </Grid>
 </Window>
