--- a/Prevu.Drawings/Machines/WaterPump.xaml
+++ b/Prevu.Drawings/Machines/WaterPump.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" DataContext="{Binding RelativeSource={RelativeSource Self}}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Width="100" Height="100">
   <Viewbox Stretch="Uniform">
     <Canvas Name="svg8" Width="100" Height="100">
       <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-      <Path Name="ColorSide" Fill="#FF607D8B" >
+      <Path Name="ColorSide" d:Fill="#FF607D8B">
         <Path.Data>
           <PathGeometry Figures="M27.9009 91.491C13.0836 83.5825 3 67.9688 3 50C3 32.0312 13.0836 16.4175 27.9009 8.50899V91.491Z" FillRule="NonZero"/>
         </Path.Data>
