--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -9,11 +9,7 @@
         Title="MainWindow" Height="746" Width="1600">
   <Grid>
 
-
-
-    <Synoptics:GR1 HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-
+    <Synoptics:DRY/>
 
   </Grid>
 </Window>
