--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="746" Width="1600">
   <Grid>
 
-    <Synoptics:DRY/>
+    <Synoptics:CH1/>
 
   </Grid>
 </Window>
