--- a/Prevu.Drawings/Machines/CV_Valve_002.xaml
+++ b/Prevu.Drawings/Machines/CV_Valve_002.xaml
@@ -5,21 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="100">
+
     <Viewbox Stretch="Uniform">
         <Canvas Name="svg6" Width="100" Height="100">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
             <Canvas.Resources/>
-            <!--Unknown tag: sodipodi:namedview-->
             <Path Name="ColorSide" Fill="#FF8FD8FC" Stroke="#FF8FD8FC">
                 <Path.Data>
-                    <PathGeometry Figures="M82.1081 26.5826C86.2228 26.9202 90.1727 29.4318 93.1703 33.7555C96.4095 38.4278 98.55 44.7784 98.55 51.4017C98.55 58.0249 96.4095 64.3756 93.1703 69.0478C90.1728 73.3716 86.2228 75.8832 82.1081 76.2207C81.8762 76.2398 81.65 76.0481 81.65 75.76L81.65 51.4017V27.0433C81.65 26.7552 81.8762 26.5636 82.1081 26.5826Z" FillRule="NonZero"/>
+                    <PathGeometry Figures="M82.1081 26.6009C86.2202 26.9385 90.1676 29.4486 93.1633 33.7697C96.4007 38.4393 98.54 44.7864 98.54 51.4058C98.54 58.0253 96.4007 64.3724 93.1633 69.042C90.1676 73.3631 86.2202 75.8732 82.1081 76.2107C81.8762 76.2298 81.65 76.0381 81.65 75.75L81.65 51.4058V27.0617C81.65 26.7736 81.8762 26.5819 82.1081 26.6009Z" FillRule="NonZero"/>
                 </Path.Data>
             </Path>
             <Path Name="path4" Fill="#FFC4C4C4" Stroke="#FFC4C4C4">
                 <Path.Data>
-                    <PathGeometry Figures="M3.48564 26.8254C2.81911 26.4551 2 26.937 2 27.6995V75.1122C2 75.9148 2.8978 76.3904 3.56175 75.9396L41.9382 49.8814C42.2774 49.6512 42.7226 49.6512 43.0617 49.8814L81.4382 75.9396C82.1022 76.3904 83 75.9148 83 75.1122V51.5V27.6995C83 26.937 82.1809 26.4551 81.5144 26.8254L42.9856 48.2302C42.6836 48.398 42.3164 48.398 42.0144 48.2302L3.48564 26.8254Z" FillRule="NonZero"/>
+                    <PathGeometry Figures="M3.48564 26.8254C2.81911 26.4551 2 26.937 2 27.6995V75.1506C2 75.9454 2.88244 76.4226 3.54753 75.9874L41.9525 50.8583C42.2851 50.6406 42.7149 50.6406 43.0475 50.8583L81.4525 75.9874C82.1176 76.4226 83 75.9454 83 75.1506V51.5V27.6995C83 26.937 82.1809 26.4551 81.5144 26.8254L42.9856 48.2302C42.6836 48.398 42.3164 48.398 42.0144 48.2302L3.48564 26.8254Z" FillRule="NonZero"/>
                 </Path.Data>
             </Path>
         </Canvas>
