Modify synoptic pages

--- a/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
@@ -143,7 +143,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="526,704,0,0" VerticalAlignment="Top" Color="Water" Width="90" StatusComponent="282-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="501,704,0,0" VerticalAlignment="Top" Color="Water" Width="115" StatusComponent="282-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="394,704,0,0" VerticalAlignment="Top" Color="Water" Width="106"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="810,518,0,0" VerticalAlignment="Top" Color="ByProduct" Width="60" StatusComponent="286-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="799,529,0,0" VerticalAlignment="Top" Color="ByProduct" Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1">
@@ -189,7 +189,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="529,601,0,0" VerticalAlignment="Top" Color="Water" Width="105" StatusComponent="282-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="503,601,0,0" VerticalAlignment="Top" Color="Water" Width="131" StatusComponent="282-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="603,628,0,0" VerticalAlignment="Top" Color="Water" Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="282-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -201,10 +201,10 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="468,536,0,0" 
+            Margin="436,536,0,0" 
             VerticalAlignment="Top" 
             ComponentName="282-21-CV1"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="485,671,0,0" VerticalAlignment="Top" Height="70" Width="56" RenderTransformOrigin="0.5,0.5" Color="Water">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="453,671,0,0" VerticalAlignment="Top" Height="70" Width="56" RenderTransformOrigin="0.5,0.5" Color="Water">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -215,7 +215,7 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="468,746,0,0" 
+            Margin="436,746,0,0" 
             VerticalAlignment="Top" 
             ComponentName="282-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="394,119,0,0" VerticalAlignment="Top" Color="Water" Width="178" StatusComponent="282-01-MA1"/>
@@ -271,7 +271,6 @@
                       VerticalAlignment="Top" 
                       JumpFromLabel="232-01-MA1" 
                       JumpToLabel="322-01-MA1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1055,82,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="829,328,0,0" VerticalAlignment="Top" Height="70" Width="51" RenderTransformOrigin="0.5,0.5" Color="Water">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -292,10 +291,18 @@
                 </TransformGroup>
             </Machines:RTF_Microfilter.RenderTransform>
         </Machines:RTF_Microfilter>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1053,426,0,0" VerticalAlignment="Top" Height="60" Width="80"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="764,601,0,0" VerticalAlignment="Top" Color="Water" Width="156" StatusComponent="286-01-MA1"/>
         <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="512,595,0,0" VerticalAlignment="Top" Height="222" Width="374"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="473,574,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="431,554,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="654,687,0,0" 
             VerticalAlignment="Top" 
@@ -311,5 +318,25 @@
             </Machines:MaterialInletOutlet.RenderTransform>
         </Machines:MaterialInletOutlet>
         <Machines:GR_001 HorizontalAlignment="Left" Margin="496,105,0,0" VerticalAlignment="Top" Height="161" Width="203"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,60,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1045,406,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
     </Grid>
 </UserControl>
