--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -45,7 +45,7 @@
             Margin="518,132,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="470,366,0,0" VerticalAlignment="Top" Width="68" StatusComponent="330-23-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="470,366,0,0" VerticalAlignment="Top" Width="74" StatusComponent="330-23-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="678,366,0,0" VerticalAlignment="Top" Width="50" StatusComponent="330-02-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="587,366,0,0" VerticalAlignment="Top" Width="61" StatusComponent="330-23-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="866,111,0,0" VerticalAlignment="Top" Width="31" Color="Water" StatusComponent="330-02-MA1"/>
@@ -154,29 +154,28 @@
             Margin="895,283,0,0" 
             VerticalAlignment="Top" 
             ComponentName="376-61-LEV"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="276,190,0,0" VerticalAlignment="Top" Width="57" Color="Water" StatusComponent="370-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="276,190,0,0" VerticalAlignment="Top" Width="64" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="382,190,0,0" VerticalAlignment="Top" Width="59" Color="Water" StatusComponent="370-25-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="312,222,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-25-CV1"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="332,282,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="312,350,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-22-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="382,314,0,0" VerticalAlignment="Top" Width="53" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="372,314,0,0" VerticalAlignment="Top" Width="63" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV1"/>
         <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="363,124,0,0" VerticalAlignment="Top" Height="224" Width="218"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="523,339,0,0" VerticalAlignment="Top" Height="60" Width="80"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="513,318,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+            <Machines:CV_Valve.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve.RenderTransform>
+        </Machines:CV_Valve>
         <Labels:Pipe HorizontalAlignment="Left" Margin="546,432,0,0" VerticalAlignment="Top" Width="644" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="330-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -189,14 +188,22 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="263,125,0,0" VerticalAlignment="Top" Width="196" StatusComponent="322-01-MA1"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="150,86,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="317,162,0,0" VerticalAlignment="Top" Height="60" Width="80"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="309,142,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+            <Machines:CV_Valve.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve.RenderTransform>
+        </Machines:CV_Valve>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="876,74,0,0" VerticalAlignment="Top" Height="115" Width="128"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="966,240,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="895,162,0,0" 
             VerticalAlignment="Top" 
             ComponentName="362-01-MA1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1223,239,0,0" VerticalAlignment="Top" Height="59" Width="80"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1147,303,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1263,332,0,0" 
@@ -214,8 +221,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1001,637,0,0" VerticalAlignment="Top" Width="83" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="931,708,0,0" VerticalAlignment="Top" Width="145" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1001,634,0,0" VerticalAlignment="Top" Width="83" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="930,707,0,0" VerticalAlignment="Top" Width="147" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -230,7 +237,7 @@
             VerticalAlignment="Top" 
             ComponentName="371-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1138,615,0,0" 
+            Margin="1138,612,0,0" 
             VerticalAlignment="Top" 
             ComponentName="371-21-CV2" RenderTransformOrigin="0.478,0.407"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="1074,542,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
@@ -243,7 +250,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="1074,604,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="1074,602,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -254,7 +261,7 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:Pipe HorizontalAlignment="Left" Margin="564,552,0,0" VerticalAlignment="Top" Color="ByProduct" Width="60" StatusComponent="352-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="550,567,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="550,568,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -309,7 +316,6 @@
             Margin="1138,449,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-21-CV1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1053,445,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="276,772,0,0" VerticalAlignment="Top" Width="369" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="681,772,0,0" VerticalAlignment="Top" Width="178" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -368,10 +374,9 @@
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="312,610,0,0" 
+            Margin="312,612,0,0" 
             VerticalAlignment="Top" 
             ComponentName="354-21-CV1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="317,560,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
         <Rectangle HorizontalAlignment="Left" Height="1" Margin="236,525,0,0" Stroke="Black" VerticalAlignment="Top" Width="37"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="270,518,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Rectangle HorizontalAlignment="Left" Height="1" Margin="228,656,0,0" Stroke="Black" VerticalAlignment="Top" Width="50"/>
@@ -400,17 +405,75 @@
                 </TransformGroup>
             </Machines:RTF_Microfilter.RenderTransform>
         </Machines:RTF_Microfilter>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="278,472,0,0" VerticalAlignment="Top" Width="57" Color="Water" StatusComponent="370-01-MA1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="317,445,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="278,472,0,0" VerticalAlignment="Top" Width="62" Color="Water" StatusComponent="370-01-MA1"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="311,424,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+            <Machines:CV_Valve.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve.RenderTransform>
+        </Machines:CV_Valve>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="150,632,0,0" 
             VerticalAlignment="Top" 
             ComponentName="354-42-PT2"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="710,472,0,0" VerticalAlignment="Top" Color="Water" Width="73" StatusComponent="352-21-CV1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="766,445,0,0" VerticalAlignment="Top" Height="58" Width="80"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1138,370,0,0" 
             VerticalAlignment="Top" 
             ComponentName="380-01-MA1"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,424,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="311,540,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Steam" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1213,218,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="756,424,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="332,282,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
     </Grid>
 </UserControl>
