--- a/Prevu.Drawings/Machines/CV_Valve_001.xaml
+++ b/Prevu.Drawings/Machines/CV_Valve_001.xaml
@@ -6,22 +6,18 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="100">
 
-    <Viewbox Stretch="Uniform">
-        <Canvas Name="svg6" Width="100" Height="100">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <Path Name="ColorSide" Fill="#FF8FD8FC" Stroke="#FF8FD8FC">
-                <Path.Data>
-                    <PathGeometry Figures="M82.1081 26.6009C86.2202 26.9385 90.1676 29.4486 93.1633 33.7697C96.4007 38.4393 98.54 44.7864 98.54 51.4058C98.54 58.0253 96.4007 64.3724 93.1633 69.042C90.1676 73.3631 86.2202 75.8732 82.1081 76.2107C81.8762 76.2298 81.65 76.0381 81.65 75.75L81.65 51.4058V27.0617C81.65 26.7736 81.8762 26.5819 82.1081 26.6009Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path Name="path4" Fill="#FFC4C4C4" Stroke="#FFC4C4C4">
-                <Path.Data>
-                    <PathGeometry Figures="M3.48564 26.8254C2.81911 26.4551 2 26.937 2 27.6995V75.1506C2 75.9454 2.88244 76.4226 3.54753 75.9874L41.9525 50.8583C42.2851 50.6406 42.7149 50.6406 43.0475 50.8583L81.4525 75.9874C82.1176 76.4226 83 75.9454 83 75.1506V51.5V27.6995C83 26.937 82.1809 26.4551 81.5144 26.8254L42.9856 48.2302C42.6836 48.398 42.3164 48.398 42.0144 48.2302L3.48564 26.8254Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-        </Canvas>
-    </Viewbox>
+  <Viewbox Stretch="Uniform">
+    <Canvas Name="svg6" Width="100" Height="100">
+      <Path x:Name="ColorSide" Fill="#FF8FD8FC" Stroke="#FF8FD8FC" Effect="{StaticResource MaterialDesignShadowDepth1}">
+        <Path.Data>
+          <PathGeometry Figures="M80.9684 26.5301C85.6587 26.8218 90.1322 29.228 93.5027 33.3461C97.1185 37.764 99.5 43.7582 99.5 50C99.5 56.2418 97.1185 62.236 93.5027 66.6539C90.1322 70.772 85.6587 73.1782 80.9684 73.4699C80.7255 73.485 80.5 73.285 80.5 73L80.5 50V27C80.5 26.715 80.7255 26.515 80.9684 26.5301Z" FillRule="NonZero"/>
+        </Path.Data>
+      </Path>
+      <Path Fill="#FFBDBDBD" Effect="{StaticResource MaterialDesignShadowDepth1}">
+        <Path.Data>
+          <PathGeometry Figures="M1.5145 25.9087C0.847971 25.5088 0 25.9889 0 26.7662V73.2338C0 74.0111 0.847972 74.4912 1.5145 74.0913L39.4855 51.3087C39.8022 51.1187 40.1978 51.1187 40.5145 51.3087L78.4855 74.0913C79.152 74.4912 80 74.0111 80 73.2338V50V26.7662C80 25.9889 79.152 25.5088 78.4855 25.9087L40.5145 48.6913C40.1978 48.8813 39.8022 48.8813 39.4855 48.6913L1.5145 25.9087Z" FillRule="NonZero"/>
+        </Path.Data>
+      </Path>
+    </Canvas>
+  </Viewbox>
 </UserControl>
