--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:local="clr-namespace:Test"
         xmlns:Synoptics="clr-namespace:Prevu.Synoptics;assembly=Prevu.Synoptics"
         x:Class="Test.MainWindow"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Background="{StaticResource MaterialDesignPaper}"
         Title="MainWindow" Height="746" Width="1600">
   <Grid>
 
-    <Synoptics:HW1/>
+    <Synoptics:GR1/>
 
   </Grid>
 </Window>
