Update RTF_Micorfilter machine Update GR1 and HW1 Synoptic Pages

--- a/Prevu.Drawings/Machines/RTF_Microfilter.xaml
+++ b/Prevu.Drawings/Machines/RTF_Microfilter.xaml
@@ -6,29 +6,74 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="100">
 
-  <Viewbox  Stretch="Uniform">
-    <Canvas Name="svg29" Width="100" Height="100">
-      <Canvas Name="g22">
-        <Ellipse  Canvas.Left="29" Canvas.Top="6" Width="57" Height="57" Name="circle2" Fill="#FF9E9E9E" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Rectangle  Canvas.Left="13" Canvas.Top="86" Width="5" Height="6" RadiusX="1" RadiusY="1" Name="rect4" Fill="#FF616161" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Rectangle  Canvas.Left="68" Canvas.Top="86" Width="5" Height="6" RadiusX="1" RadiusY="1" Name="rect6" Fill="#FF616161" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Path  Name="path8" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-          <Path.Data>
-            <PathGeometry Figures="M83.1047 31.0231C83.048 30.2172 83.9209 29.6803 84.6146 30.0942L95.0964 36.3487C95.3774 36.5164 95.5586 36.8109 95.5815 37.1373L96.0782 44.2011C96.1258 44.8779 95.4998 45.4047 94.841 45.2421L84.6216 42.7199C84.2003 42.616 83.8941 42.2521 83.8637 41.8192L83.1047 31.0231Z" FillRule="NonZero"/>
-          </Path.Data>
-        </Path>
-        <Path  Name="path10" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth2}">
-          <Path.Data>
-            <PathGeometry Figures="M2 36.4174C2 34.7605 3.34315 33.4174 5 33.4174H58.7959C59.0664 33.4174 59.3356 33.3808 59.5962 33.3087L82.1997 27.052C84.1107 26.523 86 27.9604 86 29.9432V46.5009C86 46.7598 85.9665 47.0176 85.9003 47.2679L75.9836 84.767C75.6356 86.0832 74.4448 87 73.0834 87H14.1274C12.7181 87 11.4988 86.019 11.197 84.6423L2.06957 43.0012C2.02333 42.7903 2 42.5749 2 42.3589V36.4174Z" FillRule="NonZero"/>
-          </Path.Data>
-        </Path>
-        <Ellipse  Canvas.Left="36" Canvas.Top="30" Width="8" Height="8" Name="circle12" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Ellipse  Canvas.Left="51" Width="15" Canvas.Top="74" Height="16" Name="ellipse14" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Ellipse  Canvas.Left="21" Canvas.Top="74" Width="16" Height="16" Name="circle16" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Ellipse  Canvas.Left="53" Width="11" Canvas.Top="76" Height="12" Name="ellipse18" Fill="#FF9E9E9E" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-        <Ellipse  Canvas.Left="23" Canvas.Top="76" Width="12" Height="12" Name="circle20" Fill="#FF9E9E9E" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-      </Canvas>
-    </Canvas>
-  </Viewbox>
+    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
+        <Canvas Name="svg51" Width="100" Height="100">
+            <Canvas.RenderTransform>
+                <TranslateTransform X="0" Y="0"/>
+            </Canvas.RenderTransform>
+            <Canvas.Resources/>
+            <!--Unknown tag: sodipodi:namedview-->
+            <Canvas Name="g4">
+                <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path2" Fill="#FFBDBDBD">
+                    <Path.Data>
+                        <PathGeometry Figures="M86.3193 34.4982C86.3193 50.2383 73.5595 62.9982 57.8193 62.9982C42.0792 62.9982 29.3193 50.2383 29.3193 34.4982C29.3193 18.7581 42.0792 5.99823 57.8193 5.99823C73.5595 5.99823 86.3193 18.7581 86.3193 34.4982Z" FillRule="NonZero"/>
+                    </Path.Data>
+                </Path>
+            </Canvas>
+            <Path Name="path6" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+                <Path.Data>
+                    <PathGeometry Figures="M2 36.4174C2 34.7605 3.34315 33.4174 5 33.4174H58.7959C59.0664 33.4174 59.3356 33.3808 59.5962 33.3087L82.1997 27.052C84.1107 26.523 86 27.9604 86 29.9432V46.5009C86 46.7598 85.9665 47.0176 85.9003 47.2679L75.9836 84.767C75.6356 86.0832 74.4448 87 73.0833 87H14.1274C12.7181 87 11.4988 86.019 11.197 84.6423L2.06957 43.0012C2.02333 42.7903 2 42.5749 2 42.3589V36.4174Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Ellipse Canvas.Left="33" Canvas.Top="10" Width="49" Height="49" Name="circle8" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+            <Ellipse xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="37" Canvas.Top="14" Width="41" Height="41" Name="circle10" Fill="#FFBDBDBD"/>
+            <Ellipse xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="53" Canvas.Top="30" Width="9" Height="9" Name="circle12" Fill="#FF757575"/>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path14" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M59.477 28.0636C59.1311 30.3274 55.8689 30.3274 55.523 28.0636L53.9547 17.8021C53.7697 16.5912 54.7068 15.5 55.9318 15.5H59.0682C60.2932 15.5 61.2303 16.5912 61.0453 17.8021L59.477 28.0636Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path16" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M63.9364 36.477C61.6726 36.1311 61.6726 32.8689 63.9364 32.523L74.1979 30.9547C75.4088 30.7697 76.5 31.7068 76.5 32.9318V36.0682C76.5 37.2932 75.4088 38.2303 74.1979 38.0453L63.9364 36.477Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path18" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M51.0636 32.523C53.3274 32.8689 53.3274 36.1311 51.0636 36.477L40.8021 38.0453C39.5912 38.2303 38.5 37.2932 38.5 36.0682V32.9318C38.5 31.7068 39.5912 30.7697 40.8021 30.9547L51.0636 32.523Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path20" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M60.9314 40.7274C59.5753 38.882 61.882 36.5753 63.7274 37.9314L72.0922 44.0784C73.0793 44.8038 73.1883 46.2381 72.3221 47.1043L70.1043 49.3221C69.2381 50.1883 67.8038 50.0793 67.0784 49.0922L60.9314 40.7274Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path22" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M63.7274 31.4742C61.882 32.8303 59.5754 30.5236 60.9315 28.6782L67.0785 20.3133C67.8039 19.3262 69.2382 19.2173 70.1043 20.0835L72.3222 22.3013C73.1884 23.1675 73.0794 24.6017 72.0923 25.3271L63.7274 31.4742Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path24" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M54.4741 28.6782C55.8302 30.5236 53.5235 32.8303 51.6781 31.4742L43.3133 25.3271C42.3262 24.6018 42.2172 23.1675 43.0834 22.3013L45.3012 20.0835C46.1674 19.2173 47.6017 19.3263 48.3271 20.3134L54.4741 28.6782Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path26" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M51.6783 37.9314C53.5237 36.5753 55.8304 38.882 54.4743 40.7274L48.3273 49.0922C47.6019 50.0793 46.1676 50.1883 45.3014 49.3221L43.0836 47.1043C42.2174 46.2381 42.3264 44.8038 43.3135 44.0784L51.6783 37.9314Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path28" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M55.523 40.9364C55.8689 38.6726 59.1311 38.6726 59.477 40.9364L61.0453 51.1979C61.2303 52.4088 60.2932 53.5 59.0682 53.5H55.9318C54.7068 53.5 53.7697 52.4088 53.9547 51.1979L55.523 40.9364Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path30" Fill="#FF757575">
+                <Path.Data>
+                    <PathGeometry Figures="M55.523 40.9364C55.8689 38.6726 59.1311 38.6726 59.477 40.9364L61.0453 51.1979C61.2303 52.4088 60.2932 53.5 59.0682 53.5H55.9318C54.7068 53.5 53.7697 52.4088 53.9547 51.1979L55.523 40.9364Z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Canvas>
+    </Viewbox>
 
 </UserControl>
