--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -201,7 +201,7 @@
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="876,74,0,0" VerticalAlignment="Top" Height="115" Width="128"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="966,240,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="895,162,0,0" 
+            Margin="895,182,0,0" 
             VerticalAlignment="Top" 
             ComponentName="362-01-MA1"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1147,303,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
@@ -260,7 +260,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="564,552,0,0" VerticalAlignment="Top" Color="ByProduct" Width="60" StatusComponent="352-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="564,552,0,0" VerticalAlignment="Top" Color="ByProduct" Width="68" StatusComponent="352-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="550,568,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -271,7 +271,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:Waste HorizontalAlignment="Left" Margin="532,558,0,0" VerticalAlignment="Top" Height="60" Width="68"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="533,557,0,0" VerticalAlignment="Top" Height="60" Width="68"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="677,574,0,0" VerticalAlignment="Top" Color="Water" Width="176" StatusComponent="352-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="753,670,0,0" VerticalAlignment="Top" Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
             <Labels:Pipe.RenderTransform>
@@ -319,7 +319,7 @@
         <Labels:Pipe HorizontalAlignment="Left" Margin="276,772,0,0" VerticalAlignment="Top" Width="369" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="681,772,0,0" VerticalAlignment="Top" Width="178" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="620,688,0,0" 
+            Margin="620,695,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-01-MA1"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="640,739,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
@@ -352,7 +352,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="382,472,0,0" VerticalAlignment="Top" Color="Water" Width="318" StatusComponent="370-25-CV2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="369,472,0,0" VerticalAlignment="Top" Color="Water" Width="330" StatusComponent="370-25-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="312,495,0,0" 
             VerticalAlignment="Top" 
@@ -406,16 +406,6 @@
             </Machines:RTF_Microfilter.RenderTransform>
         </Machines:RTF_Microfilter>
         <Labels:Pipe HorizontalAlignment="Left" Margin="278,472,0,0" VerticalAlignment="Top" Width="62" Color="Water" StatusComponent="370-01-MA1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="311,424,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
-            <Machines:CV_Valve.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve.RenderTransform>
-        </Machines:CV_Valve>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="150,632,0,0" 
             VerticalAlignment="Top" 
@@ -475,5 +465,15 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="311,424,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
     </Grid>
 </UserControl>
